# cryptopals

./: Cargo.toml  readme.md
data/: lorem_xor.txt
src/: aes.rs  bytes.rs  error.rs  lib.rs  oracle.rs  padding.rs  statistics.rs  string_db.rs  string_statistics.rs  transpose.rs  xor.rs
src/scoring/: chi_squared_scoring.rs  language_properties.rs  mod.rs  simple_scoring.rs
