[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cryptopals"

[dependencies]
anyhow = "1"
hex = "0.4.3"
base64 = "0.22.0"
encoding_rs = "0.8.33"
strum = "0.26"
strum_macros = "0.26"
lazy_static = "1.4.0"
getset = "0.1.2"
levenshtein = "1.0.5"